--- a/twitter_clone/requirements.txt
+++ b/twitter_clone/requirements.txt
@@ -2,3 +2,8 @@ Django==4.2.7
 Pillow==10.1.0
 django-crispy-forms==2.1
 crispy-bootstrap4==2022.1
+Django>=4.0
+gunicorn
+whitenoise
+psycopg2-binary
+python-decouple
